# pantry

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  release-please-config.json  vite.config.js
.github/workflows/: release.yml
client/: CHANGELOG.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  state.jsx
client/src/components/: CategoryInput.jsx  ChipInput.jsx  GroceryList.jsx  IngredientDetail.jsx  IngredientList.jsx  RecipeCard.jsx  RecipeDetail.jsx  RecipeEditor.jsx  RecipeForm.jsx  RecipesPage.jsx  TabBar.jsx  TagFilter.jsx  TagInput.jsx
client/src/state/: MIGRATION.md  api.jsx  example_usage.jsx  hooks.jsx  index.js  provider.jsx
client/src/store/: db.js  index.js  state.jsx  useStore.js
client/src/utils/: tags.js
mockups/: grocery-list.jsx
server/: CHANGELOG.md  database.py  main.py  models.py  pyproject.toml
src/: App.jsx  index.css
src/components/: CategoryInput.jsx  ChipInput.jsx  ConsumableCategoryInput.jsx  ConsumableDetail.jsx  ConsumableForm.jsx  ConsumablesList.jsx  GroceryList.jsx  IngredientDetail.jsx  IngredientForm.jsx  IngredientList.jsx  ItemDetail.jsx  NotesEditor.jsx  RecipeCard.jsx  RecipeDetail.jsx  RecipeEditor.jsx  RecipeForm.jsx  RecipeSourceCard.jsx  RecipeSourceInput.jsx  RecipesPage.jsx  TabBar.jsx  TagInput.jsx
src/components/common/: BackLink.jsx  Button.jsx  Card.jsx  Dropdown.jsx  EmptyState.jsx  (+6 more)
src/hooks/: useClickOutside.js
src/state/: api.jsx  hooks.jsx  index.js  provider.jsx
(+47 files in other folders)
